@@ -2,6 +2,9 @@ ChangeLog for PyLint
 ====================
 
 --
+    * #74013: new E1310[bad-str-strip-call] message warning when a call to a
+      {l,r,}strip method contains duplicate characters (patch by Torsten Marek)
+
     * #124660: internal dependencies should not appear in external dependencies
       report
 
